--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </div>
 
       <button id="btn-instructions" class="btn" style="margin-top: 2rem;">Instrucciones</button>
+      <button id="btn-fullscreen-menu" class="btn btn-secondary" style="margin-top: 1rem;">Pantalla Completa</button>
     </div>
   </div>
 
@@ -70,6 +71,7 @@
     </div>
 
     <div class="bottom-bar">
+      <button id="btn-fullscreen" class="btn btn-secondary" style="margin-right: 1rem;">Pantalla Completa</button>
       <button id="btn-reset" class="btn btn-secondary">Reset Global</button>
     </div>
   </div>
@@ -111,7 +113,7 @@
     </div>
   </div>
 
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="src/main.ts"></script>
 </body>
 
 </html>
