--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </div>
 
     <div class="bottom-bar">
+      <button id="btn-back-menu" class="btn btn-secondary" style="margin-right: 1rem;">Volver al Menú</button>
       <button id="btn-fullscreen" class="btn btn-secondary" style="margin-right: 1rem;">Pantalla Completa</button>
       <button id="btn-reset" class="btn btn-secondary">Reset Global</button>
     </div>
@@ -109,7 +110,10 @@
           <!-- Ranking populated by JS -->
         </div>
       </div>
-      <button id="btn-restart" class="btn btn-primary">Reintentar</button>
+      <div style="display: flex; gap: 1rem; justify-content: center;">
+        <button id="btn-restart" class="btn btn-primary">Reintentar</button>
+        <button id="btn-gameover-menu" class="btn btn-secondary">Volver al Menú</button>
+      </div>
     </div>
   </div>
 
