--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <span class="score-label">Kills</span>
         <span id="score">0</span>
       </div>
+      <div class="fps-container" style="margin-left: 1rem; opacity: 0.7; font-family: monospace;">
+        <span id="fps-val">60</span> FPS
+      </div>
     </div>
 
     <div class="bottom-bar">
@@ -83,7 +86,7 @@
       <h2>Cómo Jugar</h2>
       <div class="instructions-content">
         <ul>
-          <li>Usa las <b>Flechas</b> o <b>WASD</b> para moverte.</li>
+          <li>Usa las <b>Flechas</b>, <b>WASD</b> o el <b>Joystick</b> para moverte.</li>
           <li>Tus armas orbitan automáticamente a tu alrededor.</li>
           <li>Toca el <b>núcleo central</b> del enemigo con tus armas para matarlo.</li>
           <li>¡Cuidado! Si su arma toca tu núcleo, pierdes.</li>
